feature: add new chapters for java